# azerothcore

./: .dockerignore  .env.dumbbots  .env.llm  .env.ollama  .env.solo  .gitignore  .gitmodules  FEATURES.md  docker-compose.yml
.github/: README.md  UPSTREAM_SYNC.md
.github/workflows/: unit-tests.yml  upstream-sync.yml
apps/docker/: Dockerfile  Dockerfile.dev-server  ollama-entrypoint.sh  run-unit-tests.sh
apps/upstream-sync/: check-upstreams.sh
data/sql/updates/pending_db_auth/: rev_1783699006990072590.sql  rev_1784057663937177242.sql
data/sql/updates/pending_db_world/: rev_1783699018436790333.sql  rev_1784825182593518524.sql
doc/: CodebaseOverview.md
src/common/Configuration/: Config.cpp
src/server/apps/worldserver/: worldserver.conf.dist
src/server/game/Accounts/: RBAC.h
src/server/game/Chat/: Chat.cpp
src/server/game/Entities/Player/: KillRewarder.cpp  KillRewarder.h  Player.cpp  Player.h  PlayerGossip.cpp  PlayerUpdates.cpp
src/server/game/Entities/Unit/: Unit.cpp
src/server/game/Loot/: LootMgr.cpp
src/server/game/Miscellaneous/: Formulas.cpp  Formulas.h
src/server/game/Movement/MovementGenerators/: PathGenerator.cpp  PointMovementGenerator.cpp
src/server/game/Server/: PausedSessionFilter.h  WorldSession.cpp  WorldSession.h  WorldSessionMgr.cpp
src/server/game/World/: IWorld.h  World.cpp  World.h  WorldConfig.cpp  WorldConfig.h
src/server/scripts/Commands/: cs_modify.cpp  cs_pause.cpp  cs_script_loader.cpp
src/test/: CMakeLists.txt
src/test/mocks/: WorldMock.h
src/test/server/game/Commands/: PauseCommandTest.cpp
src/test/server/game/Entities/: KillRewarderTest.cpp
src/test/server/game/Loot/: LootItemTest.cpp
src/test/server/game/Miscellaneous/: FormulasTest.cpp
src/test/server/game/Server/: PausedSessionFilterTest.cpp
tools/: regen-config.py
